--- a/clientService-test.yml
+++ b/clientService-test.yml
@@ -8,7 +8,7 @@ spring:
 security:
   oauth2:
     resource:
-      user-info-uri: http://localhost:5555/users/current
+      user-info-uri: http://localhost:5555/user/current
     client:
       id: client_2
       client-secret: 123456
